kubernetes/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hackathon
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: hackathon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.27
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: hackathon
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
